projects/compiler/test/typechecker/typeidentifier/error_modalias_typeargs_missing.out
Error at %FILE_NAME%:3:10
Incorrect number of type arguments
  |  val _: e.Color[] = []
              ^
Expected 3, but 0 were passed
